--- a/app/views/public/posts/new.html.erb
+++ b/app/views/public/posts/new.html.erb
@@ -1,2 +1,52 @@
-<h1>Public::Posts#new</h1>
-<p>Find me in app/views/public/posts/new.html.erb</p>
+<%= form_with model: @post, local: true do |f| %>
+ <div class="form-group">
+  <%= f.label "商品名" %>
+  <%= f.text_field :title %>
+ </div>
+ <div class="form-group">
+   <%= f.label "目的・背景" %><br>
+   <%= f.text_area :purpose %>
+ </div>
+
+ <div class="form-group">
+   <%= f.label "コメント" %><br>
+   <%= f.text_area :comment %>
+ </div>
+
+ <div class="form-group row" id="star">
+    <%= f.label :star,'評価 ', class:'col-md-3 col-form-label' %>
+    <%= f.hidden_field :star, id: :review_star %>
+ </div>
+  <script>
+       $('#star').empty();
+    $('#star').raty({
+    size: 36,
+    starOff: '<%= asset_path('star-off.png') %>',
+    starOn : '<%= asset_path('star-on.png') %>',
+    starHalf: '<%= asset_path('star-half.png') %>',
+         scoreName: 'post[star]',
+    half: true,
+  });
+  </script>
+
+  <%= f.label "タグ選択" %>
+  <div class="form-group">
+    <%= f.collection_check_boxes(:tag_ids, Tag.all, :id, :name) do |tag| %>
+      <div class="form-check">
+       <%= tag.label class: 'form-check-label' do %>
+         <%= tag.check_box class: 'form-check-input' %>
+         <%= tag.text %>
+       <% end %>
+      </div>
+    <% end %>
+  </div>
+
+  <!--<div class="form-group">-->
+  <!-- <%#= f.label "その他ジャンル(,で区切ると複数タグ登録できます)" %><br>-->
+  <!-- <%#= f.text_field :name, placeholder: "例:アクション,RPG" %>-->
+  <!--</div>-->
+
+  <div class="form-group">
+  <%= f.submit "投稿" %>
+ </div>
+<% end %>
