--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,29 +1,59 @@
-<h2>Sign up</h2>
+<div class="container">
+    <h5 class="bg-light text-dark text-center" style="width: 20%;">新規登録</h5>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "public/shared/error_messages", resource: resource %>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= render "public/shared/error_messages", resource: resource %>
+    <table class="table table-borderless">
+      <tbody>
+        <tr>
+          <td style="width: 20%;">ニックネーム</td>
+          <td class="form-inline">
+            <%= f.text_field :nickname, autofocus: true, autocomplete: "nickname" %>
+          </td>
+        </tr>
+        <tr>
+          <td>メールアドレス</td>
+          <td class="form-inline">
+            <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+          </td>
+        </tr>
+        <tr>
+          <td>性別</td>
+          <td>
+            <%= f.select :sex, ['男', '女'], {include_blank: '選択ボックス'} %>
+          </td>
+        </tr>
+        <tr>
+          <td>生年月日</td>
+          <td>
+            <%= f.text_field :birth_day, autofocus: true, autocomplete: "birth_day", placefolder: "例：2000/01/01" %>
+          </td>
+        </tr>
+        <tr>
+          <td>パスワード
+            <% if @minimum_password_length %>
+              <em>(<%= @minimum_password_length %>文字以上)</em>
+            <% end %>
+          </td>
+        </tr>
+        <tr>
+          <td>パスワード(確認用)</td>
+          <td>
+            <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    <div class="row">
+      <div class="col-lg-3"></div>
+      <div class="col-lg-2">
+        <%= f.submit "新規登録", class: 'btn btn-success btn-sm btn-block' %>
+      </div>
+    </div>
+   <% end %>
+    <h5 class="bg-light text-dark text-center" style="wigth:30%;">すでに登録済みの方</h5>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "public/shared/links" %>
+    <h6>
+      <%= link_to "こちら", new_user_session_path %> からログインしてください
+    </h6>
+</div>
