--- a/app/views/public/users/_info.html.erb
+++ b/app/views/public/users/_info.html.erb
@@ -1,5 +1,5 @@
 <table class="table">
-  <tr><%= image_tag user.get_profile_image, size:'100x100' %></tr>
+  <th><%= image_tag user.get_profile_image, size:'100x100' %></th>
   <tr>
     <th><%= user.nickname %></th>
   </tr>
@@ -10,3 +10,8 @@
     <th><%= user.birth_day %></th>
   </tr>
 </table>
+<% if user.nickname != "guestuser" %>
+<div class="row">
+  <%= link_to '', edit_user_path(user), class: "btn btn-online-secondary btn-block fas fa-user-cog edit_user_#{user.id}" %>
+</div>
+<% end %>
