--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -1,12 +1,23 @@
 <h1>投稿一覧</h1>
 <div class="container">
   <div class="row">
+    <%= form_tag posts_path, method: :get, class: 'boards_searchForm' do %>
+      <%= select_tag :tag_id,options_from_collection_for_select(Tag.all, :id, :name, params[:tag_id]),
+                     {
+                       prompt: 'タグで絞り込み検索',
+                       onchange:'submit(this.form);'
+                     }
+      %>
+      <% end %>
+      <%= form_with url: search_posts_path, local: true, method: :get do |f| %>
+        <%= f.text_field :keyword %>
+        <%= f.submit "検索" %>
+      <% end %>
     <table class="table">
       <thead>
         <tr>
+          <th>投稿者</th>
           <th>商品名</th>
-          <th>目的・背景</th>
-          <th>コメント</th>
           <th>評価</th>
           <th>タグ</th>
         </tr>
@@ -14,9 +25,12 @@
       <tbody>
         <% @posts.each do |post| %>
         <tr>
-          <td><%= post.title %></td>
-          <td><%= post.purpose %></td>
-          <td><%= post.comment %></td>
+          <td><%= @user.nickname %></td>
+          <td>
+            <%= link_to post_path(post) do %>
+              <%= post.title %>
+            <% end %>
+          </td>
           <td>
             <div id="star-rate<%= post.id %>"></div>
             <script>
