--- a/app/views/public/users/unsubscribe.html.erb
+++ b/app/views/public/users/unsubscribe.html.erb
@@ -1,2 +1,25 @@
-<h1>Public::Users#unsubscribe</h1>
-<p>Find me in app/views/public/users/unsubscribe.html.erb</p>
+<div class="container my-5">
+  <div class="row">
+    <div class="offset-3">
+      <h1 class="alert alert-danger">本当に退会しますか？</h1>
+    </div>
+  </div>
+
+  <div class="row my-5">
+    <div class="offset-3">
+      <strong>　　　　退会すると、会員登録情報や</strong><br>
+      <strong>　　これまでの購入履歴が閲覧できなくなります。</strong><br>
+      <strong>退会する場合には、「退会する」をクリックしてください。</strong>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="offset-3 col-2">
+      <%= link_to "退会しない", my_page_path, class: "btn btn-primary" %>
+    </div>
+    <div class="offset-2 col-2">
+      <%= link_to "退会する", withdraw_path, method: :patch, class: "btn btn-danger" %>
+    </div>
+  </div>
+</div>
+
