--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -51,6 +51,11 @@
               <span><%= tag.name %></span>
             <% end %>
           </td>
+          <% if post.book_marked_by?(current_user) %>
+            <td><%= link_to "ブックマークを外す", post_book_marks_path(post), method: :delete %></td>
+          <% else %>
+            <td><%= link_to "ブックマーク", post_book_marks_path(post), method: :post %></td>
+          <% end %>
         </tr>
        <% end %>
       </tbody>
