--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -17,5 +17,53 @@
     <div class="offset-3">
         <%= link_to "投稿", new_post_path %>
     </div>
+    <h3 class="border-top">ブックマーク一覧</h3>
+    <table class="table table-container" style="display: block; overflow-y: scroll; height: calc(100vh/2);">
+　　<thead>
+        <tr>
+          <th style="position: sticky; top: 0; z-index: 1; background: gold;">投稿者名</th>
+          <th style="position: sticky; top: 0; z-index: 1; background: gold;">商品名</th>
+          <th style="position: sticky; top: 0; z-index: 1; background: gold;">評価</th>
+          <th style="position: sticky; top: 0; z-index: 1; background: gold;">タグ</th>
+        </tr>
+  </thead>
+  <tbody>
+    <% @book_marks.each do |book_mark| %>
+    <tr>
+      <td><%= book_mark.post.user.nickname %></td>
+      <td>
+        <%= link_to post_path(book_mark.post) do %>
+          <%= book_mark.post.title %>
+        <% end %>
+      </td>
+      <td>
+        <div id="star-rate<%= book_mark.post.id %>"></div>
+            <script>
+              $('#star-rate<%= book_mark.post.id %>').empty();
+              $('#star-rate<%= book_mark.post.id %>').raty({
+                size :36,
+                starOff: '<%= asset_path('star-off.png') %>',
+                starOn : '<%= asset_path('star-on.png') %>',
+                starHalf: '<%= asset_path('star-half.png') %>',
+                half: true,
+                readOnly: true,
+                score: <%= book_mark.post.star %>
+              })
+            </script>
+      </td>
+      <td>
+        <% book_mark.post.tags.each do |tag| %>
+          <span><%= tag.name %></span>
+        <% end %>
+      </td>
+    </tr>
+   <% end %>
+  </tbody>
+    </table>
+  </div>
+  <div class="offset-6">
+      <%= link_to new_post_path do %>
+        <i class="fa-solid fa-plus"></i>
+      <% end %>
   </div>
 </div>
