コメント機能

--- a/app/views/public/posts/search.html.erb
+++ b/app/views/public/posts/search.html.erb
@@ -16,7 +16,7 @@
         <tr>
           <td><%= post.title %></td>
           <td><%= post.purpose %></td>
-          <td><%= post.comment %></td>
+          <td><%= post.body %></td>
           <td>
             <div id="star-rate<%= post.id %>"></div>
             <script>
