--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -63,7 +63,7 @@
   </div>
   <div class="offset-6">
       <%= link_to new_post_path do %>
-        <i class="fa-solid fa-plus"></i>
+        <i class="fas fa-user-cog"></i>
       <% end %>
   </div>
 </div>
