--- a/app/views/public/posts/new.html.erb
+++ b/app/views/public/posts/new.html.erb
@@ -11,7 +11,7 @@
 
  <div class="form-group">
    <%= f.label "コメント" %><br>
-   <%= f.text_area :comment %>
+   <%= f.text_area :body %>
  </div>
 
  <div class="form-group row" id="star">
