--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -13,7 +13,7 @@
           <th><%= @post.purpose %></th>
         </tr>
         <tr>
-          <th><%= @post.comment %></th>
+          <th><%= @post.body %></th>
         </tr>
         <tr>
           <th>
@@ -41,6 +41,29 @@
         </tr>
       </table>
     </div>
-    
+    <div class="offset-3">
+      <h3>コメントする</h3>
+      <%= form_with model: [@post, @comment], local: true do |f| %>
+        <%= f.text_area :comment, size: "40x5" %>
+        <%= f.submit '送信', class: "btn-sm btn-primary" %>
+      <% end %>
+        <table>
+          <thead>
+            <tr>
+              <th>コメント投稿者名</th>
+              <th>コメント内容</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @comments.each do |comment| %>
+              <tr>
+                <td><%= comment.user.nickname %></td>
+                <td><%= comment.comment %></td>
+                <td><%= link_to "削除", post_comment_path(@post, comment), method: :delete %></td>
+              </tr>
+            <% end %>
+          </tbody>
+      </table>
+    </div>
   </div>
 </div>
