--- a/app/views/admin/posts/show.html.erb
+++ b/app/views/admin/posts/show.html.erb
@@ -1,2 +1,66 @@
-<h1>Admin::Posts#show</h1>
-<p>Find me in app/views/admin/posts/show.html.erb</p>
+<h1>投稿詳細</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-md-3 border border-3 border-info rounded">
+      <table class="table">
+        <tr>
+          <th><%= @user.nickname %></th>
+        </tr>
+        <tr>
+          <th><%= @post.title %></th>
+        </tr>
+        <tr>
+          <th><%= @post.purpose %></th>
+        </tr>
+        <tr>
+          <th><%= @post.body %></th>
+        </tr>
+        <tr>
+          <th>
+            <div id="star-rate<%= @post.id %>"></div>
+            <script>
+              $('#star-rate<%= @post.id %>').empty();
+              $('#star-rate<%= @post.id %>').raty({
+                size :36,
+                starOff: '<%= asset_path('star-off.png') %>',
+                starOn : '<%= asset_path('star-on.png') %>',
+                starHalf: '<%= asset_path('star-half.png') %>',
+                half: true,
+                readOnly: true,
+                score: <%= @post.star %>
+              })
+            </script>
+          </th>
+        </tr>
+        <tr>
+          <th>
+            <% @post.tags.each do |tag| %>
+              <span><%= tag.name %></span>
+            <% end %>
+          </th>
+          <th>
+            <%= link_to "削除", admin_post_path, method: :delete, class: 'btn-sm btn-danger' %>
+          </th>
+        </tr>
+      </table>
+    </div>
+    <div class="offset-3">
+        <table>
+          <thead>
+            <tr>
+              <th>コメント投稿者名</th>
+              <th>コメント内容</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @comments.each do |comment| %>
+              <tr>
+                <td><%= comment.user.nickname %></td>
+                <td><%= comment.comment %></td>
+              </tr>
+            <% end %>
+          </tbody>
+      </table>
+    </div>
+  </div>
+</div>
