--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,2 +1,35 @@
-<h1>Admin::Users#index</h1>
-<p>Find me in app/views/admin/users/index.html.erb</p>
+<h1>ユーザー一覧</h1>
+<div class="container">
+  <div class="row">
+    <table class="table">
+      <thead>
+        <tr>
+          <th>ユーザーネーム</th>
+          <th>性別</th>
+          <th>生年月日</th>
+          <th>ステータス</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @users.each do |user| %>
+          <tr>
+            <td>
+              <%= link_to admin_user_path(user) do %>
+                <%= user.nickname %>
+              <% end %>
+            </td>
+            <td><%= user.gender %></td>
+            <td><%= user.birth_day %></td>
+            <td>
+              <% if user.is_delete == false %>
+                <p class="text-success"><b>有効</b></p>
+              <% else %>
+                <p class="text-danger"><b>退会</b></p>
+              <% end %>
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
