--- a/app/views/admin/users/unsubscribe.html.erb
+++ b/app/views/admin/users/unsubscribe.html.erb
@@ -1,2 +1,16 @@
-<h1>Admin::Users#unsubscribe</h1>
-<p>Find me in app/views/admin/users/unsubscribe.html.erb</p>
+<div class="container my-5">
+  <div class="row">
+    <div class="offset-3">
+      <h1 class="alert alert-danger">本当に退会させますか？</h1>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="offset-3 col-2">
+      <%= link_to "退会させない", admin_user_path, class: "btn btn-primary" %>
+    </div>
+    <div class="offset-2 col-2">
+      <%= link_to "退会させる", admin_withdraw_path, method: :patch, class: "btn btn-danger" %>
+    </div>
+  </div>
+</div>
