--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,11 @@
   </head>
 
   <body>
-    <%= render 'layouts/user_header' %>
+    <% if request.fullpath.include? "/admin" %>
+      <%= render 'layouts/admin_header' %>
+    <% else %>
+      <%= render 'layouts/user_header' %>
+    <% end %>
     <%= yield %>
   </body>
 </html>
