--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -16,6 +16,7 @@
     <table class="table">
       <thead>
         <tr>
+          <th></th>
           <th>投稿者</th>
           <th>商品名</th>
           <th>評価</th>
@@ -25,6 +26,7 @@
       <tbody>
         <% @posts.each do |post| %>
         <tr>
+          <td><%= image_tag @user.get_profile_image, size:'50x50' %></td>
           <td><%= @user.nickname %></td>
           <td>
             <%= link_to post_path(post) do %>
@@ -51,11 +53,9 @@
               <span><%= tag.name %></span>
             <% end %>
           </td>
-          <% if post.book_marked_by?(current_user) %>
-            <td><%= link_to "ブックマークを外す", post_book_marks_path(post), method: :delete %></td>
-          <% else %>
-            <td><%= link_to "ブックマーク", post_book_marks_path(post), method: :post %></td>
-          <% end %>
+          <td id="book_mark_buttons_<%= post.id %>">
+            <%= render "public/book_marks/bookmark", post: post %>
+          </td>
         </tr>
        <% end %>
       </tbody>
