--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -26,7 +26,7 @@
         <tr>
           <td>生年月日</td>
           <td>
-            <%= f.text_field :birth_day, autofocus: true, autocomplete: "birth_day", placefolder: "例：2000/01/01" %>
+            <%= f.text_field :birth_day, autofocus: true, autocomplete: "birth_day", placeholder: "例：2000/01/01" %>
           </td>
         </tr>
         <tr>
