--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -14,9 +14,6 @@
          <% end %>
        </div>
     </div>
-    <div class="offset-3">
-        <%= link_to "投稿", new_post_path %>
-    </div>
     <h3 class="border-top">ブックマーク一覧</h3>
     <table class="table table-container" style="display: block; overflow-y: scroll; height: calc(100vh/2);">
 　　<thead>
@@ -61,9 +58,9 @@
   </tbody>
     </table>
   </div>
-  <div class="offset-6">
+  <div class="offset-10">
       <%= link_to new_post_path do %>
-        <i class="fas fa-user-cog"></i>
+        <i class="fas fa-plus-circle fa-3x"></i>
       <% end %>
   </div>
 </div>
