--- a/app/views/public/users/unsubscribe.html.erb
+++ b/app/views/public/users/unsubscribe.html.erb
@@ -15,7 +15,7 @@
 
   <div class="row">
     <div class="offset-3 col-2">
-      <%= link_to "退会しない", my_page_path, class: "btn btn-primary" %>
+      <%= link_to "退会しない", user_path, class: "btn btn-primary" %>
     </div>
     <div class="offset-2 col-2">
       <%= link_to "退会する", withdraw_path, method: :patch, class: "btn btn-danger" %>
