投稿一覧バグ修正

--- a/app/views/admin/posts/show.html.erb
+++ b/app/views/admin/posts/show.html.erb
@@ -4,7 +4,10 @@
     <div class="col-md-3 border border-3 border-info rounded">
       <table class="table">
         <tr>
-          <th><%= @user.nickname %></th>
+          <%= image_tag @post.user.get_profile_image, size:'50x50' %>
+        </tr>
+        <tr>
+          <th><%= @post.user.nickname %></th>
         </tr>
         <tr>
           <th><%= @post.title %></th>
