--- a/app/views/public/book_marks/create.js.erb
+++ b/app/views/public/book_marks/create.js.erb
@@ -1,1 +1,1 @@
-$('#book_mark_buttons_<%= @post.id %>').html("<%= j(render "book_marks/bookmark", post: @post) %>");
+$('#book_mark_buttons_<%= @post.id %>').html("<%= j(render "public/book_marks/bookmark", post: @post) %>");
