--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -4,6 +4,7 @@
     <table class="table">
       <thead>
         <tr>
+          <th></th>
           <th>投稿者</th>
           <th>商品名</th>
           <th>評価</th>
@@ -13,7 +14,8 @@
       <tbody>
         <% @posts.each do |post| %>
         <tr>
-          <td><%= @user.nickname %></td>
+          <td><%= image_tag post.user.get_profile_image, size:'50x50' %></td>
+          <td><%= postuser.nickname %></td>
           <td>
             <%= link_to admin_post_path(post) do %>
               <%= post.title %>
