--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -9,8 +9,8 @@
                   <%= f.text_field :nickname, autofocus: true, class: 'form-control', placeholder: "ユーザーネーム" %>&emsp;
               </div><br>
               <div class="form-inline">
-                <%= f.label :profile_image_url, "ユーザー画像" %>&emsp;
-                <%= f.file_field :profile_image_url, placeholder: "プロフィール画像", accept: "image/*" %>
+                <%= f.label :profile_image, "ユーザー画像" %>&emsp;
+                <%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %>
               </div><br>
               <div class="form-inline">
                   <%= f.label :email, "メールアドレス" %>&emsp;
