アクセス権限

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,9 @@
     <% else %>
       <%= render 'layouts/user_header' %>
     <% end %>
+    <footer class="fixed-bottom border-top text-light bg-dark" style="height: 85px; text-align: center ; line-height: 85px;">
+      Copyright © StarGame Inc. All Rights Reserved.
+    </footer>
     <%= yield %>
   </body>
 </html>
