--- a/app/views/public/users/_info.html.erb
+++ b/app/views/public/users/_info.html.erb
@@ -9,12 +9,13 @@
   <tr>
     <th><%= user.birth_day %></th>
   </tr>
-  <tr></tr>
 </table>
 <% if user.nickname != "guestuser" %>
-<div class="row">
-  <%= link_to user_edit_path, class: "btn btn-primary btn-block" do %>
-    <i class="fas fa-user-cog"></i>
+  <% if @user.id == current_user.id %>
+    <div class="row">
+      <%= link_to user_edit_path, class: "btn btn-primary btn-block" do %>
+        <i class="fas fa-user-cog"></i>
+      <% end %>
+    </div>
   <% end %>
-</div>
 <% end %>
