--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -27,7 +27,11 @@
         <% @posts.each do |post| %>
         <tr>
           <td><%= image_tag post.user.get_profile_image, size:'50x50' %></td>
-          <td><%= post.user.nickname %></td>
+          <td>
+            <%= link_to my_page_path(post.user_id) do %>
+              <%= post.user.nickname %>
+            <% end %>
+          </td>
           <td>
             <%= link_to post_path(post) do %>
               <%= post.title %>
