--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -15,7 +15,7 @@
         <% @posts.each do |post| %>
         <tr>
           <td><%= image_tag post.user.get_profile_image, size:'50x50' %></td>
-          <td><%= postuser.nickname %></td>
+          <td><%= post.user.nickname %></td>
           <td>
             <%= link_to admin_post_path(post) do %>
               <%= post.title %>
@@ -46,4 +46,5 @@
       </tbody>
     </table>
   </div>
+  <%= paginate @posts %>
 </div>
