コメント機能非同期化

--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,2 +1,17 @@
-<h1>Admin::Homes#top</h1>
-<p>Find me in app/views/admin/homes/top.html.erb</p>
+<div class="container my-5">
+  <div class="row">
+    <div class="offset-4">
+      <h1>STAR GAME</h1>
+    </div>
+  </div>
+
+  <div class="row my-5">
+    <div class="offset-4">
+      <strong>こちらは、管理者用のページです。</strong><br>
+      <strong>管理者の方はヘッダーのログインボタンから</strong><br>
+      <strong>必要情報を入力してログインしてください。</strong><br>
+      <strong>ログイン済みの場合、ヘッダーから</strong><br>
+      <strong>各ページへ移動してください。</strong>
+    </div>
+  </div>
+</div>
