--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,8 +17,8 @@
     <% else %>
       <%= render 'layouts/user_header' %>
     <% end %>
-    <footer class="fixed-bottom border-top text-light bg-dark" style="height: 85px; text-align: center ; line-height: 85px;">
-      Copyright © StarGame Inc. All Rights Reserved.
+    <footer class="fixed-bottom border-top border-dark text-dark bg-white" style="height: 65px; text-align: center ; line-height: 70px;">
+      <p>Copyright © StarGame Inc. All Rights Reserved.</p>
     </footer>
     <%= yield %>
   </body>
