--- a/app/views/public/users/_info.html.erb
+++ b/app/views/public/users/_info.html.erb
@@ -1,5 +1,5 @@
-<table class="table">
-  <th><%= image_tag user.get_profile_image, size:'100x100' %></th>
+<table class="table table-bordered border-primary">
+  <th><%= image_tag user.get_profile_image, size: '100x100' %></th>
   <tr>
     <th><%= user.nickname %></th>
   </tr>
