--- a/app/views/layouts/_admin_header.html.erb
+++ b/app/views/layouts/_admin_header.html.erb
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navbar navbar-expand navbar-dark bg-dark navbar-fixed-top">
+  <nav class="navbar navbar-expand navbar-dark bg-white border-bottom border-dark navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
         <%= link_to admin_root_path do %>
@@ -9,17 +9,17 @@
       <% if admin_signed_in? %>
         <ul class="navbar-nav">
           <li class="nav-item" style="list-style: none;">
-            <%= link_to "ユーザー一覧", admin_users_path(current_user), class: 'nav-link text-light' %>
+            <%= link_to "ユーザー一覧", admin_users_path(current_user), class: 'nav-link text-dark btn btn-success' %>
           </li>
           <li class="nav-item" style="list-style: none;">
-            <%= link_to "投稿一覧", admin_posts_path, class: 'nav-link text-light' %>
+            <%= link_to "投稿一覧", admin_posts_path, class: 'nav-link text-dark btn btn-info' %>
           </li>
           <li class="nav-item" style="list-style: none;">
-            <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: 'nav-link text-light' %>
+            <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: 'nav-link text-dark btn btn-danger' %>
           </li>
         <% else %>
         <li class="nav-item" style="list-style: none;">
-          <%= link_to "ログイン", new_admin_session_path, class: 'nav-link text-light' %>
+          <%= link_to "ログイン", new_admin_session_path, class: 'nav-link text-dark btn btn-primary' %>
         </li>
         </ul>
       <% end %>
