--- a/app/views/layouts/_user_header.html.erb
+++ b/app/views/layouts/_user_header.html.erb
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navbar navbar-expand navbar-dark bg-dark navbar-fixed-top">
+  <nav class="navbar navbar-expand navbar-dark bg-white border-bottom border-dark navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
         <%= link_to root_path do %>
@@ -7,28 +7,28 @@
         <% end %>
       </div>
       <% if user_signed_in? %>
-        <span class="nav-link text-center text-light">
+        <span class="nav-link text-center text-dark">
           こんにちは！<%= current_user.nickname %>さん！
         </span>
         <ul class="navbar-nav">
           <li class="nav-item" style="list-style: none;">
-            <%= link_to "マイページ", my_page_path(current_user), class: 'nav-link text-light' %>
+            <%= link_to "マイページ", my_page_path(current_user), class: 'nav-link text-dark btn btn-success' %>
           </li>
           <li class="nav-item" style="list-style: none;">
-            <%= link_to "投稿一覧", posts_path, class: 'nav-link text-light' %>
+            <%= link_to "投稿一覧", posts_path, class: 'nav-link text-dark btn btn-info' %>
           </li>
           <li class="nav-item" style="list-style: none;">
-            <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: 'nav-link text-light' %>
+            <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: 'nav-link text-dark btn btn-danger' %>
           </li>
         <% else %>
         <li class="nav-item" style="list-style: none;">
-          <%= link_to "About", about_path, class: 'nav-link text-light' %>
+          <%= link_to "About", about_path, class: 'nav-link text-dark btn btn-info' %>
         </li>
         <li class="nav-item" style="list-style: none;">
-          <%= link_to "新規登録", new_user_registration_path, class: 'nav-link text-light' %>
+          <%= link_to "新規登録", new_user_registration_path, class: 'nav-link text-dark btn-success' %>
         </li>
         <li class="nav-item" style="list-style: none;">
-          <%= link_to "ログイン", new_user_session_path, class: 'nav-link text-light' %>
+          <%= link_to "ログイン", new_user_session_path, class: 'nav-link text-dark btn btn-primary' %>
         </li>
         </ul>
       <% end %>
