--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,18 +1,18 @@
 <div class="container">
   <div claas="row">
-    <div class="col-md-3">
+    <div class="col-md-4 offset-4 p-5">
       <h1>STAR GAME</h1>
     </div>
   </div>
-  <div class="btn-wrapper col-10 mx-auto">
+  <div class="btn-wrapper col-10 mx-auto p-5">
         <div class="row">
-          <%= link_to 'ゲストログイン（閲覧用）', users_guest_sign_in_path, class: "btn btn-secondary btn-sm btn-block mb-3 sign_in", method: :post %>
+          <%= link_to 'ゲストログイン（閲覧用）', users_guest_sign_in_path, class: "btn btn-secondary btn-lg btn-block mb-3 sign_in", method: :post %>
         </div>
         <div class="row">
-          <%= link_to 'ログイン',new_user_session_path, class: "btn btn-info btn-sm btn-block mb-3 sign_in" %>
+          <%= link_to 'ログイン',new_user_session_path, class: "btn btn-info btn-lg btn-block mb-3 sign_in" %>
         </div>
         <div class="row">
-          <%= link_to '新規登録',new_user_registration_path, class: "btn btn-success btn-sm btn-block sign_up" %>
+          <%= link_to '新規登録',new_user_registration_path, class: "btn btn-success btn-lg btn-block sign_up" %>
         </div>
       </div>
 </div>
