--- a/app/views/public/posts/search.html.erb
+++ b/app/views/public/posts/search.html.erb
@@ -15,8 +15,16 @@
         <% @posts.each do |post| %>
         <tr>
           <td><%= image_tag post.user.get_profile_image, size:'50x50' %></td>
-          <td><%= post.user.nickname %></td>
-          <td><%= post.title %></td>
+          <td>
+            <%= link_to my_page_path(post.user_id) do %>
+              <%= post.user.nickname %>
+            <% end %>
+          </td>
+          <td>
+            <%= link_to post_path(post) do %>
+              <%= post.title %>
+            <% end %>
+          </td>
           <td>
             <div id="star-rate<%= post.id %>"></div>
             <script>
