--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container mt-5 px-5 px-sm-0">
   <div class="row">
-    <div class="col-md-3 border border-3 border-primary rounded">
+    <div class="col-md-3">
       <h2>PROFILE</h2>
       <%= render 'info', user: @user %>
     </div>
