新規投稿後のエラー修正

--- a/app/views/public/users/_info.html.erb
+++ b/app/views/public/users/_info.html.erb
@@ -1,5 +1,11 @@
 <table class="table table-bordered border-primary">
-  <th><%= image_tag user.get_profile_image, size: '100x100' %></th>
+  <th>
+    <% if user.profile_image.attached? %>
+      <%= image_tag user.profile_image, size: "100x100" %>
+    <% else %>
+      <%= image_tag 'no_image', size: "100x100" %>
+    <% end %>
+  </th>
   <tr>
     <th><%= user.nickname %></th>
   </tr>
