ログイン・登録画面レイアウト

--- a/app/views/layouts/_user_header.html.erb
+++ b/app/views/layouts/_user_header.html.erb
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navbar navbar-expand navbar-dark bg-white border-bottom border-dark navbar-fixed-top">
+  <nav class="navbar navbar-expand navbar-dark border-bottom border-dark navbar-fixed-top" style="background-color: #FFFF66">
     <div class="container">
       <div class="navbar-header">
         <%= link_to root_path do %>
