--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,2 +1,20 @@
 @import '~bootstrap/scss/bootstrap';
-//@import '~@fortawesome/fontawesome-free/scss/fontawesome';
+
+body {
+   height: 100%;
+   width: 100%;
+   background-color: #FFFFCC;
+ }
+
+ footer {
+    width: 100%;
+    height: 50px;
+    color: #808080;
+    background: #FFFF66;
+    position: absolute;
+    bottom: 0;
+ }
+
+ footer p {
+   text-align: center;
+ }
