レイアウト途中経過

--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,12 +1,12 @@
 <div class="container my-5">
   <div class="row">
-    <div class="offset-4">
-      <h1>STAR GAME</h1>
+    <div class="offset-5">
+      <%= image_tag 'logo.png', size: "150x150" %>
     </div>
   </div>
 
   <div class="row my-5">
-    <div class="offset-4">
+    <div class="offset-4 pl-3">
       <strong>こちらは、管理者用のページです。</strong><br>
       <strong>管理者の方はヘッダーのログインボタンから</strong><br>
       <strong>必要情報を入力してログインしてください。</strong><br>
