--- a/app/views/layouts/_admin_header.html.erb
+++ b/app/views/layouts/_admin_header.html.erb
@@ -3,7 +3,7 @@
     <div class="container">
       <div class="navbar-header">
         <%= link_to admin_root_path do %>
-          <p>STAR GAME</p>
+          <%= image_tag 'logo.png', size: "55x55" %>
         <% end %>
       </div>
       <% if admin_signed_in? %>
