--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div claas="row">
-    <div class="col-md-4 offset-4 p-5">
-      <h1>STAR GAME</h1>
+    <div class="col-md-4 offset-5 pt-5 pr-5">
+      <%= image_tag 'logo.png', size: "150x150" %>
     </div>
   </div>
   <div class="btn-wrapper col-10 mx-auto p-5">
