--- a/app/views/public/posts/new.html.erb
+++ b/app/views/public/posts/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
- <h1>新規投稿</h1>
+ <h2 style="color: #FFBEDA; text-align: center;">新規投稿</h2>
  <div class="offset-1">
   <%= form_with model: @post, local: true do |f| %>
    <div class="form-group">
