--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -1,5 +1,4 @@
-<h1>投稿詳細</h1>
-<div class="container">
+<div class="container pt-5">
   <div class="row">
     <div class="col-md-5">
       <table class="table table-bordered border-primary">
@@ -56,7 +55,7 @@
       </table>
     </div>
     <div class="offset-3">
-      <h3>コメントする</h3>
+      <h3 style="color: #0066FF;">コメントする</h3>
       <div class="new-comment">
         <%= render 'public/comments/form', post: @post, comment: @comment %>
       </div>
