--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -4,11 +4,15 @@ body {
    height: 100%;
    width: 100%;
    background-color: #FFFFCC;
+   position: relative;
+ }
+
+ main {
+   padding-bottom: 50px;
  }
 
  footer {
     width: 100%;
-    height: 50px;
     color: #808080;
     background: #FFFF66;
     position: absolute;
