--- a/app/views/layouts/_user_header.html.erb
+++ b/app/views/layouts/_user_header.html.erb
@@ -3,13 +3,10 @@
     <div class="container">
       <div class="navbar-header">
         <%= link_to root_path do %>
-          <p>STAR GAME</p>
+          <%= image_tag 'logo.png', size: "55x55" %>
         <% end %>
       </div>
       <% if user_signed_in? %>
-        <span class="nav-link text-center text-dark">
-          こんにちは！<%= current_user.nickname %>さん！
-        </span>
         <ul class="navbar-nav">
           <li class="nav-item" style="list-style: none;">
             <%= link_to "マイページ", my_page_path(current_user), class: 'nav-link text-dark btn btn-success' %>
