--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     <script src="https://kit.fontawesome.com/b153492b0c.js" crossorigin="anonymous"></script>
+
     <%= yield :css %>
   </head>
 
@@ -18,9 +19,9 @@
     <% else %>
       <%= render 'layouts/user_header' %>
     <% end %>
-    <footer>
+    <main><%= yield %></main>
+    <footer class="footer">
       <p>Copyright © StarGame Inc. All Rights Reserved.</p>
     </footer>
-    <%= yield %>
   </body>
 </html>
