--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,11 +1,26 @@
-<div class="container pt-5 mt-5">
-  <div class="row">
-    <div class="offset-4">
-      <strong>このサイトは、ゲーム関連の商品の情報を検索したり、</strong><br>
-      <strong>ゲーム関連の商品のレビューの投稿、閲覧が可能なサイトです。</strong><br>
-      <strong>さっそく新規登録を行って、様々な商品のレビューを行いましょう！</strong><br>
-      <strong>登録済みの方は、ヘッダーかトップページのログインボタンから</strong><br>
-      <strong>必要情報を入力して、ログインしましょう！</strong>
+<div id="carousel-2" class="carousel slide" data-interval="10000">
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-2" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-2" data-slide-to="1"></li>
+    <li data-target="#carousel-2" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="images/CGAGFVL1136_TP_V4.jpg" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="images/23534123_s.jpg" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="images/4887064_m.jpg" alt="Third slide">
     </div>
   </div>
+  <a class="carousel-control-prev" href="#carousel-2" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carousel-2" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
 </div>
