--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -1,4 +1,4 @@
-<h1>投稿一覧</h1>
+<h2 style="color: #99CCCC; text-align: center;">投稿一覧</h2>
 <div class="container">
   <div class="row">
     <%= form_tag posts_path, method: :get, class: 'boards_searchForm' do %>
@@ -9,10 +9,15 @@
                      }
       %>
       <% end %>
-      <%= form_with url: search_posts_path, local: true, method: :get do |f| %>
+      <%= form_with url: search_posts_path, local: true, method: :get, class: 'pl-3' do |f| %>
         <%= f.text_field :keyword %>
         <%= f.submit "検索" %>
       <% end %>
+      <p class="pl-3">
+        <%= link_to "新しい順", posts_path(latest: "true") %>
+        |<%= link_to "古い順", posts_path(old: "true") %>
+        |<%= link_to "評価の高い順", posts_path(star_count: "true") %>
+      </p>
     <table class="table">
       <thead>
         <tr>
