aboutページレイアウト

--- a/app/views/layouts/_user_header.html.erb
+++ b/app/views/layouts/_user_header.html.erb
@@ -2,7 +2,7 @@
   <nav class="navbar navbar-expand navbar-dark border-bottom border-dark navbar-fixed-top" style="background-color: #FFFF66">
     <div class="container">
       <div class="navbar-header">
-        <%= link_to root_path do %>
+        <%= link_to about_path do %>
           <%= image_tag 'logo.png', size: "55x55" %>
         <% end %>
       </div>
