--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,3 +1,4 @@
+<h2 class="pb-5 pt-5" style="text-align: center;">～このサイトについて～</h2>
 <div id="carousel-2" class="carousel slide" data-interval="10000">
   <ol class="carousel-indicators">
     <li data-target="#carousel-2" data-slide-to="0" class="active"></li>
@@ -5,14 +6,14 @@
     <li data-target="#carousel-2" data-slide-to="2"></li>
   </ol>
   <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="d-block w-100" src="images/CGAGFVL1136_TP_V4.jpg" alt="First slide">
+    <div class="carousel-item active" style="text-align: center;">
+      <%= image_tag '/assets/CGAGFVL1136_TP_V4.jpg', size: "1400x840" %>
     </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="images/23534123_s.jpg" alt="Second slide">
+    <div class="carousel-item" style="text-align: center;">
+      <%= image_tag '/assets/23534123_s.jpg', size: "1400x840" %>
     </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="images/4887064_m.jpg" alt="Third slide">
+    <div class="carousel-item" style="text-align: center;">
+      <%= image_tag '/assets/4887064_m.jpg', size: "1400x840" %>
     </div>
   </div>
   <a class="carousel-control-prev" href="#carousel-2" role="button" data-slide="prev">
@@ -23,4 +24,35 @@
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
+</div>
+
+<div class="container pt-5">
+    <h3 style="text-align: center;">ゲームでステイホームを楽しもう！</h3>
+    <p style="text-align: center;">
+      コロナ禍でのステイホームが長引く中で、過ごし方で悩んでいる方もいます。<br>
+      <strong>ゲームをして、ステイホームを楽しみませんか？</strong><br>
+      しかし、「ゲームといってもなにをやればいいんだろう？」「どんなゲームが面白いんだろう？」と<br>
+    　お悩みの方もいらっしゃると思います。<br>
+    　ぜひこのサイトを閲覧し、ゲーマーのリアルな声を参考に、ゲームを楽しみましょう！
+    </p>
+</div>
+
+<div class="container pt-5">
+  <h3 style="text-align: center;">気になるゲームを探そう！</h3>
+  <p style="text-align: center;">
+    ゲーマーの方の中には、やっているゲームがマンネリ化して、やりたいゲームを探したい場合や、<br>
+    ゲームや関連商品の価格などの情報が知りたい方もいらっしゃるかと思います。<br>
+    このサイトの検索機能を使って、ゲームを探してみたり、情報を閲覧してみましょう！<br>
+    あなたにとって役立つ情報が得られるかもしれません！
+  </p>
+</div>
+
+<div class="container pt-5 pb-5">
+  <h3 style="text-align: center;">ゲームの感想を共有しよう！</h3>
+  <p style="text-align: center;">
+    ゲームをプレイして、「このゲーム楽しかった！」または「このゲームは自分には合わなかった」と感じたとき、<br>
+    <strong>ぜひその感想を共有してみませんか？</strong><br>
+    あなたのその感想が、ほかのゲーマーやゲーム初心者の方に役立つ情報となるでしょう！<br>
+    いますぐ登録して、投稿してみましょう！
+  </p>
 </div>
