--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -21,11 +21,11 @@
     <table class="table">
       <thead>
         <tr>
-          <th></th>
-          <th>投稿者</th>
-          <th>商品名</th>
-          <th>評価</th>
-          <th>タグ</th>
+          <th style="background-color: #8EB8FF;"></th>
+          <th style="background-color: #8EB8FF;">投稿者</th>
+          <th style="background-color: #8EB8FF;">商品名</th>
+          <th style="background-color: #8EB8FF;">評価</th>
+          <th style="background-color: #8EB8FF;">タグ</th>
         </tr>
       </thead>
       <tbody>
