--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -14,7 +14,7 @@
          <% end %>
        </div>
     </div>
-    <h3 class="border-top">ブックマーク一覧</h3>
+    <h3 class="pt-5">ブックマーク一覧</h3>
     <table class="table table-container" style="display: block; overflow-y: scroll; height: calc(100vh/2);">
 　　<thead>
         <tr>
