--- a/app/views/layouts/_user_header.html.erb
+++ b/app/views/layouts/_user_header.html.erb
@@ -19,7 +19,7 @@
           </li>
         <% else %>
         <li class="nav-item" style="list-style: none;">
-          <%= link_to "About", about_path, class: 'nav-link text-dark btn btn-info' %>
+          <%= link_to "サイト概要", about_path, class: 'nav-link text-dark btn btn-info' %>
         </li>
         <li class="nav-item" style="list-style: none;">
           <%= link_to "新規登録", new_user_registration_path, class: 'nav-link text-dark btn-success' %>
