--- a/app/views/layouts/_user_header.html.erb
+++ b/app/views/layouts/_user_header.html.erb
@@ -2,12 +2,15 @@
   <nav class="navbar navbar-expand navbar-dark border-bottom border-dark navbar-fixed-top" style="background-color: #FFFF66">
     <div class="container">
       <div class="navbar-header">
-        <%= link_to about_path do %>
+        <%= link_to root_path do %>
           <%= image_tag 'logo.png', size: "55x55" %>
         <% end %>
       </div>
       <% if user_signed_in? %>
         <ul class="navbar-nav">
+          <li class="nav-item" style="list-style: none;">
+            <%= link_to "サイト概要", about_path, class: 'nav-link text-dark btn btn-warning' %>
+          </li>
           <li class="nav-item" style="list-style: none;">
             <%= link_to "マイページ", my_page_path(current_user), class: 'nav-link text-dark btn btn-success' %>
           </li>
