--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,4 +1,4 @@
-<h2 style="text-align: center; color: #33FF99;">ユーザー一覧</h2>
+<h2 class="pt-3 pb-3" style="text-align: center; color: #33FF99;">ユーザー一覧</h2>
 <div class="container">
   <div class="row">
     <table class="table">
