--- a/app/views/layouts/_admin_header.html.erb
+++ b/app/views/layouts/_admin_header.html.erb
@@ -9,17 +9,29 @@
       <% if admin_signed_in? %>
         <ul class="navbar-nav">
           <li class="nav-item" style="list-style: none;">
-            <%= link_to "ユーザー一覧", admin_users_path(current_user), class: 'nav-link text-dark btn btn-success' %>
+            <%= link_to admin_users_path(current_user), class: 'nav-link text-dark' do %>
+              <i class="fas fa-users"></i>
+              ユーザー一覧
+            <% end %>
           </li>
           <li class="nav-item" style="list-style: none;">
-            <%= link_to "投稿一覧", admin_posts_path, class: 'nav-link text-dark btn btn-info' %>
+            <%= link_to admin_posts_path, class: 'nav-link text-dark' do %>
+              <i class="fas fa-gamepad"></i>
+              投稿一覧
+            <% end %>
           </li>
           <li class="nav-item" style="list-style: none;">
-            <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: 'nav-link text-dark btn btn-danger' %>
+            <%= link_to destroy_admin_session_path, method: :delete, class: 'nav-link text-dark' do %>
+              <i class="fas fa-sign-out-alt"></i>
+              ログアウト
+            <% end %>
           </li>
         <% else %>
         <li class="nav-item" style="list-style: none;">
-          <%= link_to "ログイン", new_admin_session_path, class: 'nav-link text-dark btn btn-primary' %>
+          <%= link_to new_admin_session_path, class: 'nav-link text-dark' do %>
+            <i class="fas fa-sign-in-alt"></i>
+            ログイン
+          <% end %>
         </li>
         </ul>
       <% end %>
