--- a/app/views/layouts/_user_header.html.erb
+++ b/app/views/layouts/_user_header.html.erb
@@ -9,26 +9,47 @@
       <% if user_signed_in? %>
         <ul class="navbar-nav">
           <li class="nav-item" style="list-style: none;">
-            <%= link_to "サイト概要", about_path, class: 'nav-link text-dark btn btn-warning' %>
+            <%= link_to about_path, class: 'nav-link text-dark' do %>
+              <i class="fas fa-lightbulb"></i>
+              サイト概要
+            <% end %>
           </li>
           <li class="nav-item" style="list-style: none;">
-            <%= link_to "マイページ", my_page_path(current_user), class: 'nav-link text-dark btn btn-success' %>
+            <%= link_to my_page_path(current_user), class: 'nav-link text-dark' do %>
+              <i class="fas fa-user"></i>
+              マイページ
+            <% end %>
           </li>
           <li class="nav-item" style="list-style: none;">
-            <%= link_to "投稿一覧", posts_path, class: 'nav-link text-dark btn btn-info' %>
+            <%= link_to posts_path, class: 'nav-link text-dark' do %>
+              <i class="fas fa-gamepad"></i>
+              投稿一覧
+            <% end %>
           </li>
           <li class="nav-item" style="list-style: none;">
-            <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: 'nav-link text-dark btn btn-danger' %>
+            <%= link_to destroy_user_session_path, method: :delete, class: 'nav-link text-dark' do %>
+              <i class="fas fa-sign-out-alt"></i>
+              ログアウト
+            <% end %>
           </li>
         <% else %>
         <li class="nav-item" style="list-style: none;">
-          <%= link_to "サイト概要", about_path, class: 'nav-link text-dark btn btn-info' %>
+          <%= link_to about_path, class: 'nav-link text-dark' do %>
+            <i class="fas fa-lightbulb"></i>
+            サイト概要
+          <% end %>
         </li>
         <li class="nav-item" style="list-style: none;">
-          <%= link_to "新規登録", new_user_registration_path, class: 'nav-link text-dark btn-success' %>
+          <%= link_to new_user_registration_path, class: 'nav-link text-dark' do %>
+            <i class="fas fa-user-plus"></i>
+            新規登録
+          <% end %>
         </li>
         <li class="nav-item" style="list-style: none;">
-          <%= link_to "ログイン", new_user_session_path, class: 'nav-link text-dark btn btn-primary' %>
+          <%= link_to new_user_session_path, class: 'nav-link text-dark' do %>
+            <i class="fas fa-sign-in-alt"></i>
+            ログイン
+          <% end %>
         </li>
         </ul>
       <% end %>
