--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -1,4 +1,4 @@
-<h2 style="color: #99CCCC; text-align: center;">投稿一覧</h2>
+<h2 class="pt-3 pb-3" style="color: #99CCCC; text-align: center;">投稿一覧</h2>
 <div class="container">
   <div class="row">
     <%= form_tag posts_path, method: :get, class: 'boards_searchForm' do %>
@@ -10,6 +10,7 @@
       %>
       <% end %>
       <%= form_with url: search_posts_path, local: true, method: :get, class: 'pl-3' do |f| %>
+        <%= select_tag :key_ascending, options_for_select("新しい順": "created_at asc", "古い順": "created_at desc", "高評価順": "star desc", "低評価順": "star asc"), include_blanc: true %>
         <%= f.text_field :keyword %>
         <%= f.submit "検索" %>
       <% end %>
@@ -26,6 +27,7 @@
           <th style="background-color: #8EB8FF;">商品名</th>
           <th style="background-color: #8EB8FF;">評価</th>
           <th style="background-color: #8EB8FF;">タグ</th>
+          <th style="background-color: #8EB8FF;">投稿日時</th>
         </tr>
       </thead>
       <tbody>
@@ -68,6 +70,7 @@
               <span><%= tag.name %></span>
             <% end %>
           </td>
+          <td><%= l post.created_at %></td>
           <td id="book_mark_buttons_<%= post.id %>">
             <%= render "public/book_marks/bookmark", post: post %>
           </td>
@@ -75,6 +78,11 @@
        <% end %>
       </tbody>
     </table>
+    <div class="offset-10">
+      <%= link_to new_post_path do %>
+        <i class="fas fa-plus-circle fa-3x"></i>
+      <% end %>
+    </div>
   </div>
   <%= paginate @posts %>
 </div>
