--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -7,13 +7,13 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active" style="text-align: center;">
-      <%= image_tag '/assets/CGAGFVL1136_TP_V4.jpg', size: "1400x840" %>
+      <%= image_tag 'CGAGFVL1136_TP_V4.jpg', size: "1400x840" %>
     </div>
     <div class="carousel-item" style="text-align: center;">
-      <%= image_tag '/assets/23534123_s.jpg', size: "1400x840" %>
+      <%= image_tag '23534123_s.jpg', size: "1400x840" %>
     </div>
     <div class="carousel-item" style="text-align: center;">
-      <%= image_tag '/assets/4887064_m.jpg', size: "1400x840" %>
+      <%= image_tag '4887064_m.jpg', size: "1400x840" %>
     </div>
   </div>
   <a class="carousel-control-prev" href="#carousel-2" role="button" data-slide="prev">
