--- a/app/views/layouts/_admin_header.html.erb
+++ b/app/views/layouts/_admin_header.html.erb
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navbar navbar-expand navbar-dark border-bottom border-dark navbar-fixed-top" style="background-color: #FFFF66">
+  <nav class="navbar navbar-expand navbar-dark border-bottom border-dark navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
         <%= link_to admin_root_path do %>
