--- a/app/views/layouts/_user_header.html.erb
+++ b/app/views/layouts/_user_header.html.erb
@@ -1,11 +1,12 @@
 <header>
-  <nav class="navbar navbar-expand navbar-dark border-bottom border-dark navbar-fixed-top" style="background-color: #FFFF66">
+  <nav class="navbar navbar-expand navbar-dark border-bottom  navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
         <%= link_to root_path do %>
           <%= image_tag 'logo.png', size: "55x55" %>
         <% end %>
       </div>
+      <h4>STAR GAME</h4>
       <% if user_signed_in? %>
         <ul class="navbar-nav">
           <li class="nav-item" style="list-style: none;">
