--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -72,5 +72,7 @@
       </table>
     </div>
   </div>
-  <%= paginate @posts %>
+  <div class="offset-2">
+    <%= paginate @posts %>
+  </div>
 </div>
