--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -3,6 +3,15 @@
     <div class="col-md-3">
       <h2>PROFILE</h2>
       <%= render 'info', user: @user %>
+      <% if @user.nickname != "guestuser" %>
+      <% if @user.id == current_user.id %>
+        <div class="row">
+          <%= link_to user_edit_path, class: "btn btn-primary btn-block" do %>
+            <i class="fas fa-user-cog"></i>
+          <% end %>
+        </div>
+      <% end %>
+    <% end %>
     </div>
     <div class="offset-3">
      <h3>商品を探す</h3>
