--- a/app/views/public/posts/new.html.erb
+++ b/app/views/public/posts/new.html.erb
@@ -7,7 +7,7 @@
     <%= f.text_field :title, class: 'form-control' %>
    </div>
    <div class="form-group">
-     <%= f.label "目的・背景" %><br>
+     <%= f.label "購入した目的・背景" %><br>
      <%= f.text_area :purpose, class: 'form-control' %>
    </div>
 
