--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -6,7 +6,7 @@
           <% if @post.user.profile_image.attached? %>
             <%= image_tag @post.user.profile_image, size: "100x100" %>
           <% else %>
-            <%= image_tag 'no_image', size: "100x100" %>
+            <%= image_tag 'no_image.jpg', size: "100x100" %>
           <% end %>
         </tr>
         <tr>
