--- a/app/views/layouts/_admin_header.html.erb
+++ b/app/views/layouts/_admin_header.html.erb
@@ -6,6 +6,7 @@
           <%= image_tag 'logo.png', size: "55x55" %>
         <% end %>
       </div>
+      <h4>STAR GAME</h4>
       <% if admin_signed_in? %>
         <ul class="navbar-nav">
           <li class="nav-item" style="list-style: none;">
